# rust-vmm

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.buildkite/: test_description.json
.github/: dependabot.yml
.github/workflows/: release-acpi_tables.yml  release-event-manager.yml  release-vm-memory.yml  release-vmm-sys-util.yml
acpi_tables/: Cargo.toml  coverage_config_x86_64.json
acpi_tables/src/: aml.rs  lib.rs
event-manager/: Cargo.toml  coverage_config_aarch64.json
event-manager/.buildkite/: custom-tests.json
vm-memory/: .gitmodules  Cargo.toml  TODO.md  coverage_config_aarch64.json
vm-memory/.buildkite/: custom-tests.json
vmm-sys-util/: CHANGELOG.md  Cargo.toml
vmm-sys-util/src/: fam.rs
vmm-sys-util/src/linux/: epoll.rs  timerfd.rs
